--- a/Dockerfile.elixir
+++ b/Dockerfile.elixir
@@ -14,6 +14,7 @@ RUN apk -U add \
     erlang-parsetools=$ERLANG_PACKAGE_VERSION \
     erlang-public-key=$ERLANG_PACKAGE_VERSION \
     erlang-ssl=$ERLANG_PACKAGE_VERSION \
+    erlang-tools=$ERLANG_PACKAGE_VERSION \
     erlang-syntax-tools=$ERLANG_PACKAGE_VERSION
 
 # Elixir
